# pyble

./: .coverage  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
doc/coverage/: class_index.html  conftest_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_bible_base_py.html  z_145eef247bfb46b6_bible_base_search_test_py.html  z_145eef247bfb46b6_bible_manager_py.html  z_145eef247bfb46b6_elberfelder1905_py.html  z_145eef247bfb46b6_luther1912_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_models_py.html  z_145eef247bfb46b6_schlachter1951_py.html  z_145eef247bfb46b6_segond1910_py.html  z_145eef247bfb46b6_setup-konkordanz_py.html  z_145eef247bfb46b6_strong_manager_py.html  z_145eef247bfb46b6_web - Kopie_py.html  z_145eef247bfb46b6_web_py.html
doc/uml/: classes_pyble.dot  packages_pyble.dot
src/: bible_base.py  bible_manager.py  elberfelder1905.py  ignore_words_de.txt  ignore_words_en.txt  ignore_words_fr.txt  luther1912.py  main.py  schlachter1951.py  segond1910.py  setup-konkordanz.py  strong_manager.py  web.py
src/pyble.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/static/: base.css
src/templates/: about.html  base.html  count.html  home.html  parallel.html  read.html  search.html  strong.html
tests/: bible_base_search_test.py  bible_base_test.py  bible_manager_test.py  elberfelder1905_test.py  luther1912_test.py  main_test.py  models_test.py  schlachter1951_test.py  segond1910_test.py  strong_manager_test.py  test_ui_playwright.py  web_test.py
(+1 files in other folders)
