[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyble"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-playwright",
    "playwright",
    "requests",
    "coverage",
    "httpx",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
    "src/setup-konkordanz.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "--cov=src --cov-report=html:doc/coverage --cov-report=term-missing --ignore=tests/test_ui_playwright.py"
